# eudi2web3

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  build_w2c2.sh  makefile  rust-toolchain.toml  trusted_setup.sh
.devcontainer/: Dockerfile
.github/workflows/: ci.yml
circuits/: bits2partialB64.circom  blsbug2.circom  blsbug3.circom  core.circom  dlpexample.circom  json.circom  minimal.circom  mux.circom  only_sha.circom  sdjwt_es256_sha256_1claim.circom  small.circom  small_nocrypto.circom  tiny.circom  tiny_nocrypto.circom  to_be_named.circom  util.circom  witness_test.circom
circuits/tests/: bits2partialB64.test.ts  json.test.ts  package-lock.json  package.json
circuits/tests/test-circuits/: bits2partialB64_1.circom  bits2partialB64_2.circom  bits2partialB64_3.circom  bits2partialB64_4.circom  bits2partialB64_5.circom  bits2partialB64_6.circom  jsonCheckKeyValue.circom  jsonGetSDEntry.circom
crates/benchmark/: Cargo.toml
crates/benchmark/benches/: witness_gen.rs
crates/constraint_usage/: Cargo.toml
crates/constraint_usage/src/: main.rs
crates/vkey2cardano/: Cargo.toml
crates/vkey2cardano/src/: main.rs
scripts/: circom_rename.sh  deploy.sh  install_w2c2.sh  run_w2c2.sh
src/: keyfinder.rs  lib.rs  main.rs  mdoc.rs  prover.rs  routes.rs  sdjwt.rs  test.rs  test_sha_custom.rs  witness.rs
src/prover/: common.rs  multiuse.rs  snarkjs.rs
src/publish/: cardano.rs
src/witness/: runtime.rs  sha.rs  tests.rs
static/: index.html  openid-configuration.json
static/css/: style.css
static/js/: app.js
templates/: w2c2_circuit_specific.c
verifier/cardano/: README.md  aiken.toml  plutus.json
verifier/cardano/validators/: eudi2web3_demo.ak
