[package]
name = "eudi2web3"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ark-bls12-381 = { version = "0.5.0", default-features = false }
ark-bn254 = { version = "0.5.0", default-features = false }
ark-ec = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }
ark-groth16 = { version = "0.5.0", default-features = false }
ark-relations = { version = "0.5.1", default-features = false }
# circom-prover = { version = "0.1.4" }
# See https://github.com/zkmopro/mopro/issues/697
circom-prover = { git = "https://github.com/zkmopro/mopro", branch = "bls-script"}
num-bigint = { version = "0.4.6", default-features = false }
rand = "0.8"
rust-witness = { version = "0.1.6", default-features = false }

# For exploring SD-JWT credentials
sd-jwt-rs = "0.7.1"
jsonwebtoken = "9"
serde_json = {version = "1.0.149", features = ["raw_value"]}
base64 = "0.22.1"

# For exploring mDoc credentials
bhmdoc = "0.5.0"
bh-jws-utils = "0.6.1"
bhx5chain = { version = "0.3.2", features = ["test-utils"] }

# For verifying SD-JWT credentials in Rust without using the library
serde = "1.0.228"
ecdsa = "0.16.9"
ring = "0.17.14"
pem = "3.0.6"
sha2 = "0.10.9"
ark-serialize = "0.5.0"
wtns-file = "0.1.5"
ark-snark = "0.5.1"
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["net", "rt-multi-thread"] }
urlencoding = "2.1.3"
crossbeam = "0.8.4"

[build-dependencies]
cc = { version = "1.2.55", features = ["parallel"] }
walkdir = "2.5.0"
