[package]
name = "vkey2cardano"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
serde = "1.0.228"
serde_json = {version = "1.0.149"}
num-bigint = { version = "0.4.6", default-features = false }
ark-bls12-381 = { version = "0.5.0", default-features = false, features = ["curve"] }
ark-ff = { version = "0.5.0", default-features = false }
pallas-primitives = {version = "0.35.0" }

